source/blender/blenkernel/intern/layer.c
@@ -2432,8 +2432,12 @@ struct ViewLayerAOV *BKE_view_layer_add_aov(struct ViewLayer *view_layer)
 
 void BKE_view_layer_remove_aov(ViewLayer *view_layer, ViewLayerAOV *aov)
 {
-  BLI_assert(BLI_findindex(&view_layer->aovs, aov) != -1);
+  if (BLI_findindex(&view_layer->aovs, aov) == -1) {
+    return;
+  }
+
   BLI_assert(aov != NULL);
+
   if (view_layer->active_aov == aov) {
     if (aov->next) {
       viewlayer_aov_active_set(view_layer, aov->next);
